GNOME Bugzilla – Bug 668967
Doesn't lock if already in an active state
Last modified: 2012-01-31 17:04:48 UTC
If the screensaver is already active without a lock, and it got a request to lock, it would bail out without switching to a locked state. Reproduce with: gnome-screensaver-command -a; sleep 5; gnome-screensaver-command -l
Created attachment 206368 [details] [review] Patch that fixes the issue
Review of attachment 206368 [details] [review]: Thanks. one comment below: ::: src/gs-monitor.c @@ +178,2 @@ res = gs_listener_set_active (monitor->priv->listener, TRUE); + if (! res && ! active) { Shouldn't we avoid calling gs_listener_set_active at all if it's already active?
Ah, yes, that would indeed make more sense. :)
You have a git account, yea? If so, feel free to push your patch with that change.
Created attachment 206529 [details] [review] revised atch that fixes the issue I don't believe I have git access. Here's a revised patch. Thanks!