Properly lock even if already active

If the screensaver is already active without a lock, and it
got a request to lock, it would bail out without switching to a locked
state.

https://bugzilla.gnome.org/show_bug.cgi?id=668967