src/gs-monitor.c
@@ -167,18 +167,24 @@ gs_monitor_lock_screen (GSMonitor *monitor)
 {
         gboolean res;
         gboolean locked;
+        gboolean active;
 
         /* set lock flag before trying to activate screensaver
            in case something tries to react to the ActiveChanged signal */
 
         gs_manager_get_lock_active (monitor->priv->manager, &locked);
         gs_manager_set_lock_active (monitor->priv->manager, TRUE);
-        res = gs_listener_set_active (monitor->priv->listener, TRUE);
-        if (! res) {
-                /* If we've failed then restore lock status */
-                gs_manager_set_lock_active (monitor->priv->manager, locked);
-                gs_debug ("Unable to lock the screen");
+        active = gs_manager_get_active (monitor->priv->manager);
+
+        if (! active) {
+                res = gs_listener_set_active (monitor->priv->listener, TRUE);
+                if (! res) {
+                        /* If we've failed then restore lock status */
+                        gs_manager_set_lock_active (monitor->priv->manager, locked);
+                        gs_debug ("Unable to lock the screen");
+                }
         }
+
 }
 
 static void
